# Log-file-data-visualization---Elasticsearch-Kibana

./: README.md
FlexibleComputerLanguage/: CMakeLists.txt  Defs.txt
FlexibleComputerLanguage/Core/: Command.cpp  DefFileReader.cpp  Defs.h  MetaData.h  ScriptReader.cpp  ScriptReader.h  Tests.cpp  Tests.h
FlexibleComputerLanguage/Core/TestCases/files/: TestLoadFromCodeLibraryScript.txt  TestLoadFromCodeLibraryScriptDefs.txt
FlexibleComputerLanguage/Core/TestCases/files/test1/: AppVerifierLog  AppVerifierLogWin  AppVerifierLog_  Defs.txt
FlexibleComputerLanguage/FlexibleComputerLanguage/: Defs.txt  FlexibleComputerLanguage.1  LogJsonParser.cpp  LogJsonParser.h  OTPParser.cpp  OTPParser.h  QueryExecuter.cpp  QueryExecuter.h  QueryTreeScript.cpp  QueryTreeScript.h  main.cpp  maskedJSON.json  resultJSON.json  resultJSONold.json  scriptfunc.txt
FlexibleComputerLanguage/FlexibleComputerLanguage/Masking/: maskfunction.txt  maskscript.txt
FlexibleComputerLanguage/FlexibleComputerLanguage/QueryResult/: LogFile.txt  elasticsearch.js
FlexibleComputerLanguage/FlexibleComputerLanguage/Scripts/: script.txt  scripttest.txt  scriptwithfunc.txt  scrptwithnofunc
FlexibleComputerLanguage/FlexibleComputerLanguage/rapidjson/: document.h
kibana visualization scripts/bar chart/: Output.json  Query.txt  QueryResult.json  elasticsearch.js
kibana visualization scripts/data table/: Query.txt  QueryResult.json  elasticsearch.js
kibana visualization scripts/heat map/: Query.txt  QueryResult.json  elasticsearch.js
kibana visualization scripts/line chart/: Output.json  elasticsearch.js
kibana visualization scripts/pie chart -1 layer/: Output.json  elasticsearch.js
kibana visualization scripts/pie chart -2 layers/: Output.json  Query.txt  QueryResult.json  elasticsearch.js
log-data-extracter/: Instructions for Execution.txt  README.md
log-data-extracter/LogAnalyzer/: AdditionalFunctions.h  Bool.cpp  CMakeLists.txt  CPlusPlusEntry.cpp  CPlusPlusEntry.h  Command.cpp  Command.h  CommonIncludes.h  DefFileReader.cpp  DefFileReader.h  Defs.h  Entity.h  EntityList.cpp  EntityList.h  ExecutionTemplate.cpp  ExecutionTemplate.h  ExecutionTemplateList.cpp  ExecutionTemplateList.h  Int.h  MetaData.h  Node.cpp  Node.h  Null.h  ScriptReader.cpp  ScriptReader.h  StringOperations.cpp  Tests.cpp  Tests.h  TypeDefs.h  Value.h  main.cpp
log-data-extracter/LogAnalyzer/LDEL/: ELBasicVariableParser.cpp  ELBlockTemplate.cpp  ELBlockTemplateParser.cpp  ELCompositeVariableParser.cpp  ELConstantString.cpp  ELFillerString.cpp  ELFloat.cpp  ELInterpretter.cpp  ELInterpretter.h  ELInterpretterJSON.cpp  ELInterpretterJSON.h  ELJSON.cpp  ELJSON.h  ELLogFileFilter.cpp  ELLogFileFilter.h  ELNodeWrapper.cpp  ELNodeWrapper.h  ELNodeWrapperJSON.cpp  ELNodeWrapperJSON.h  ELParser.cpp  ELSequenceVar.cpp  ELString.cpp  ELText.cpp  ELVariable.cpp  ELVariable.h
log-data-extracter/LogAnalyzer/tests/LDEL_test1/: Defs.txt  backup.txt  filteredLog.txt  log.txt  logBig.txt  logSmall.txt  logjson.txt  result.txt  resultBig.txt  resultJSON.json  script.txt  scriptTracified.txt  scriptjson.txt  testResultJson.json  testresult.txt
(+26 files in other folders)
