cmake_minimum_required(VERSION 3.15)
project(LogAnalyzer)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(LDEL)

add_executable(LogAnalyzer
        LDEL/ELBasicVariableParser.cpp
        LDEL/ELBasicVariableParser.h
        LDEL/ELBlockElement.cpp
        LDEL/ELBlockElement.h
        LDEL/ELBlockTemplate.cpp
        LDEL/ELBlockTemplate.h
        LDEL/ELBlockTemplateParser.cpp
        LDEL/ELBlockTemplateParser.h
        LDEL/ELCompositeVariableParser.cpp
        LDEL/ELCompositeVariableParser.h
        LDEL/ELConstantString.cpp
        LDEL/ELConstantString.h
        LDEL/ELFillerString.cpp
        LDEL/ELFillerString.h
        LDEL/ELFloat.cpp
        LDEL/ELFloat.h
        LDEL/ELInterpretedElement.cpp
        LDEL/ELInterpretedElement.h
        LDEL/ELInterpretter.cpp
        LDEL/ELInterpretter.h
        LDEL/ELInterpretterJSON.cpp
        LDEL/ELInterpretterJSON.h
        LDEL/ELJSON.cpp
        LDEL/ELJSON.h
        LDEL/ELLineParser.cpp
        LDEL/ELLineParser.h
        LDEL/ELLineParserResult.cpp
        LDEL/ELLineParserResult.h
        LDEL/ELLineTemplate.cpp
        LDEL/ELLineTemplate.h
        LDEL/ELLineTemplateParser.cpp
        LDEL/ELLineTemplateParser.h
        LDEL/ELListParser.cpp
        LDEL/ELListParser.h
        LDEL/ELNodeWrapper.cpp
        LDEL/ELNodeWrapper.h
        LDEL/ELNodeWrapperJSON.cpp
        LDEL/ELNodeWrapperJSON.h
        LDEL/ELNumber.cpp
        LDEL/ELNumber.h
        LDEL/ELParser.cpp
        LDEL/ELParser.h
        LDEL/ELParserResult.cpp
        LDEL/ELParserResult.h
        LDEL/ELSequenceBlockElement.cpp
        LDEL/ELSequenceBlockElement.h
        LDEL/ELSequenceVar.cpp
        LDEL/ELSequenceVar.h
        LDEL/ELSingularBlockElement.cpp
        LDEL/ELSingularBlockElement.h
        LDEL/ELSpacesString.cpp
        LDEL/ELSpacesString.h
        LDEL/ELString.cpp
        LDEL/ELString.h
        LDEL/ELStringLiteralParser.cpp
        LDEL/ELStringLiteralParser.h
        LDEL/ELText.cpp
        LDEL/ELText.h
        LDEL/ELVariable.cpp
        LDEL/ELVariable.h
        LDEL/ELVariableParser.cpp
        LDEL/ELVariableParser.h
        LDEL/ELLogFileFilter.cpp
        LDEL/ELLogFileFilter.h
        AdditionalFunctions.h
        Bool.cpp
        Bool.h
        Command.cpp
        Command.h
        CommonIncludes.h
        CPlusPlusEntry.cpp
        CPlusPlusEntry.h
        DefFileReader.cpp
        DefFileReader.h
        Defs.h
        Entity.h
        EntityList.cpp
        EntityList.h
        ExecutionContext.h
        ExecutionTemplate.cpp
        ExecutionTemplate.h
        ExecutionTemplateList.cpp
        ExecutionTemplateList.h
        Int.h
        main.cpp
        MemMan.cpp
        MemMan.h
        MetaData.h
        Node.cpp
        Node.h
        Null.h
        ProcessLog.h
        ScriptReader.cpp
        ScriptReader.h
        StringOperations.cpp
        StringOperations.h
        targetver.h
        Tests.cpp
        Tests.h
        TypeDefs.h
        Utils.cpp
        Utils.h
        Value.h )
